--- a/ihmc-high-level-behaviors/src/test/resources/configurations/VRDepthSensorDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/VRDepthSensorDemo/ImGuiSettings.ini
@@ -16,12 +16,28 @@ Collapsed=0
 
 [Window][Point Cloud Settings]
 Pos=0,19
-Size=275,842
+Size=275,386
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
+
+[Window][###GlobalWidgetIndex:1:Sensor Color]
+Pos=0,407
+Size=275,226
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][###GlobalWidgetIndex:0:Sensor Depth]
+Pos=0,635
+Size=275,226
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=3728,288 Size=1105,842 Split=X Selected=0x2E64DC63
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=275,842 Selected=0x03ADA57D
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=828,842 CentralNode=1 Selected=0x2E64DC63
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=4248,171 Size=1105,842 Split=X Selected=0x2E64DC63
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=275,842 Split=Y Selected=0x03ADA57D
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=275,386 Selected=0x03ADA57D
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=275,454 Split=Y Selected=0x9E2C936A
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=275,226 Selected=0x9E2C936A
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=275,226 Selected=0x9FD6269C
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=828,842 CentralNode=1 Selected=0x2E64DC63
 
