Integrating height map with A* planner

--- a/ihmc-sensor-processing/src/main/resources/us/ihmc/sensorProcessing/heightMap/heightMapParameters.ini
+++ b/ihmc-sensor-processing/src/main/resources/us/ihmc/sensorProcessing/heightMap/heightMapParameters.ini
@@ -1,8 +1,8 @@
 #20211003
 #Sun Oct 03 21:40:21 CDT 2021
-gridResolutionXY=0.05
+gridResolutionXY=0.03
 gridSizeXY=3.0
 maxZ=1.5
-nominalVariance=1.0E-4
-maxPointsPerCell=6
+nominalStdDev=1.0E-2
+maxPointsPerCell=12
 mahalonobisScale=1.5
