--- a/ihmc-high-level-behaviors/src/test/resources/configurations/VRDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/VRDemo/ImGuiSettings.ini
@@ -1,13 +1,13 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,22
-Size=1100,778
+Size=1454,778
 Collapsed=0
 
 [Window][3D View]
-Pos=0,22
-Size=1100,778
+Pos=513,22
+Size=941,778
 Collapsed=0
-DockId=0x8B93E3BD,0
+DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -19,6 +19,14 @@ Pos=831,619
 Size=250,161
 Collapsed=0
 
+[Window][VR Thread Debugger]
+Pos=0,22
+Size=511,778
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=3730,321 Size=1100,778 CentralNode=1 Selected=0x2E64DC63
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=225,196 Size=1454,778 Split=X Selected=0x2E64DC63
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=511,778 Selected=0x237D161D
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=587,778 CentralNode=1 Selected=0x2E64DC63
 
