--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -16,16 +16,16 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][###GlobalWidgetIndex:1:Stepping L515 Color]
-Pos=0,527
-Size=397,510
+Pos=0,22
+Size=397,338
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][###GlobalWidgetIndex:0:Stepping L515 Depth]
-Pos=0,22
-Size=397,503
+Pos=0,362
+Size=397,331
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000A,0
 
 [Window][3D View]
 Pos=399,22
@@ -38,14 +38,22 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Blurred Depth]
+Pos=0,695
+Size=397,342
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=3345,207 Size=1841,1015 Split=X Selected=0x2E64DC63
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=397,578 Split=Y Selected=0x9EB86F58
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=397,286 Selected=0x9D97B846
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=397,290 Selected=0x9EB86F58
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1095,578 CentralNode=1 Selected=0x2E64DC63
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=345,808 Split=Y Selected=0x91AAEDF6
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Selected=0x66CCB7E1
-    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
+    DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=397,578 Split=Y Selected=0x9EB86F58
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=397,671 Split=Y Selected=0x9D97B846
+        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=397,338 Selected=0x9EB86F58
+        DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=397,331 Selected=0x9D97B846
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,342 Selected=0x417F04C3
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1095,578 CentralNode=1 Selected=0x2E64DC63
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=345,808 Split=Y Selected=0x91AAEDF6
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Selected=0x66CCB7E1
+    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
 
