Bashing my head trying to get a gaussian blurred image out of this thing. Extract GDXBytedecoImage which has been helpful.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][###java.lang.Class:Environment]
 Pos=1496,22
-Size=345,802
+Size=345,455
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
 
 [Window][###java.lang.Integer:Stepping L515 Simulator]
 Pos=1496,826
@@ -44,6 +44,12 @@ Size=397,342
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][GPU Planar Region Extraction]
+Pos=1496,479
+Size=345,345
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
@@ -54,6 +60,8 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Sp
       DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,342 Selected=0x417F04C3
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1095,578 CentralNode=1 Selected=0x2E64DC63
   DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=345,808 Split=Y Selected=0x91AAEDF6
-    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Selected=0x66CCB7E1
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Split=Y Selected=0x66CCB7E1
+      DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=345,455 Selected=0x66CCB7E1
+      DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=345,345 Selected=0x78337185
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
 
