cvtColor is now working. Collapse GDXPixmapBytedecoImage.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -50,6 +50,16 @@ Size=345,345
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Normalized Depth]
+Pos=421,65
+Size=353,294
+Collapsed=0
+
+[Window][Converted Depth]
+Pos=418,419
+Size=363,276
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
