Get a lot more stuff coded up for OpenCL planar region extraction. Working on getting OpenCL images working.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -60,8 +60,13 @@ Pos=418,419
 Size=363,276
 Collapsed=0
 
+[Window][Filtered Depth]
+Pos=431,91
+Size=456,361
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3280,217 Size=1841,1015 Split=X Selected=0x2E64DC63
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=508,190 Size=1841,1015 Split=X Selected=0x2E64DC63
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
     DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=397,578 Split=Y Selected=0x9EB86F58
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=397,671 Split=Y Selected=0x9D97B846
