--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -61,12 +61,58 @@ Size=363,276
 Collapsed=0
 
 [Window][Filtered Depth]
-Pos=431,91
-Size=456,361
+Pos=405,47
+Size=280,231
+Collapsed=0
+
+[Window][SubImages]
+Pos=407,309
+Size=667,410
+Collapsed=0
+
+[Window][Gx Image]
+Pos=407,522
+Size=226,197
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Gy Image]
+Pos=635,522
+Size=220,197
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Gz Image]
+Pos=857,522
+Size=217,197
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][Nx Image]
+Pos=407,331
+Size=226,189
+Collapsed=0
+DockId=0x00000013,0
+
+[Window][Ny Image]
+Pos=635,331
+Size=220,189
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][Nz Image]
+Pos=857,331
+Size=217,189
+Collapsed=0
+DockId=0x00000016,0
+
+[Window][Planar Region Extraction Image]
+Pos=413,746
+Size=309,229
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=508,190 Size=1841,1015 Split=X Selected=0x2E64DC63
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
     DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=397,578 Split=Y Selected=0x9EB86F58
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=397,671 Split=Y Selected=0x9D97B846
@@ -79,4 +125,15 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=508,190 Size=1841,1015 Spl
       DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=345,455 Selected=0x66CCB7E1
       DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=345,345 Selected=0x78337185
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
+DockSpace         ID=0xE68300E5 Window=0x033EB1DA Pos=3767,512 Size=667,388 Split=Y
+  DockNode        ID=0x0000000D Parent=0xE68300E5 SizeRef=300,86 Split=X Selected=0x43C0488A
+    DockNode      ID=0x00000013 Parent=0x0000000D SizeRef=226,189 Selected=0x43C0488A
+    DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=439,189 Split=X Selected=0xE5B7433E
+      DockNode    ID=0x00000015 Parent=0x00000014 SizeRef=220,189 Selected=0xE5B7433E
+      DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=217,189 Selected=0xD45F59A3
+  DockNode        ID=0x0000000E Parent=0xE68300E5 SizeRef=300,90 Split=X
+    DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=226,90 Selected=0x5C8F53A1
+    DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=439,90 Split=X Selected=0xFAF85815
+      DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=220,197 CentralNode=1 Selected=0xFAF85815
+      DockNode    ID=0x00000012 Parent=0x00000010 SizeRef=217,197 Selected=0xCB104288
 
