--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -4,34 +4,34 @@ Size=1841,1015
 Collapsed=0
 
 [Window][###java.lang.Class:Environment]
-Pos=1496,22
-Size=345,455
+Pos=1475,22
+Size=366,284
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][###java.lang.Integer:Stepping L515 Simulator]
-Pos=1496,826
-Size=345,211
+Pos=1475,826
+Size=366,211
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][###GlobalWidgetIndex:1:Stepping L515 Color]
 Pos=0,22
-Size=397,338
+Size=230,338
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][###GlobalWidgetIndex:0:Stepping L515 Depth]
 Pos=0,362
-Size=397,331
+Size=230,331
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][3D View]
-Pos=399,22
-Size=1095,1015
+Pos=232,22
+Size=1241,532
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000016,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -45,8 +45,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][GPU Planar Region Extraction]
-Pos=1496,479
-Size=345,345
+Pos=1475,308
+Size=366,516
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -61,80 +61,86 @@ Size=363,276
 Collapsed=0
 
 [Window][Filtered Depth]
-Pos=405,47
-Size=280,231
+Pos=0,695
+Size=230,342
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][SubImages]
-Pos=407,309
-Size=667,410
+Pos=232,556
+Size=1241,481
 Collapsed=0
+DockId=0x00000018,0
 
 [Window][Gx Image]
-Pos=407,522
-Size=226,197
+Pos=232,803
+Size=204,234
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Gy Image]
-Pos=635,522
-Size=220,197
+Pos=438,803
+Size=236,234
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Gz Image]
-Pos=857,522
-Size=217,197
+Pos=676,803
+Size=222,234
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Nx Image]
-Pos=407,331
-Size=226,189
+Pos=232,578
+Size=204,223
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Ny Image]
-Pos=635,331
-Size=220,189
+Pos=438,578
+Size=238,223
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Nz Image]
-Pos=857,331
-Size=217,189
+Pos=678,578
+Size=220,223
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000017,0
 
 [Window][Planar Region Extraction Image]
-ViewportPos=4462,233
-ViewportId=0x89C40EA5
-Size=985,754
+Pos=900,578
+Size=573,459
 Collapsed=0
+DockId=0x0000001A,0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1494,808 Split=X
-    DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=397,578 Split=Y Selected=0x9EB86F58
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1473,808 Split=X
+    DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=230,578 Split=Y Selected=0x9EB86F58
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=397,671 Split=Y Selected=0x9D97B846
         DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=397,338 Selected=0x9EB86F58
         DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=397,331 Selected=0x9D97B846
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,342 Selected=0x417F04C3
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1095,578 CentralNode=1 Selected=0x2E64DC63
-  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=345,808 Split=Y Selected=0x91AAEDF6
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,342 Selected=0x768036C6
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1241,578 Split=Y Selected=0x2E64DC63
+      DockNode    ID=0x00000016 Parent=0x00000003 SizeRef=1074,532 CentralNode=1 Selected=0x2E64DC63
+      DockNode    ID=0x00000018 Parent=0x00000003 SizeRef=1074,481 Selected=0x033EB1DA
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=366,808 Split=Y Selected=0x91AAEDF6
     DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Split=Y Selected=0x66CCB7E1
-      DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=345,455 Selected=0x66CCB7E1
-      DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=345,345 Selected=0x78337185
+      DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=345,284 Selected=0x66CCB7E1
+      DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=345,516 Selected=0x78337185
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
-DockSpace         ID=0xE68300E5 Window=0x033EB1DA Pos=3767,512 Size=667,388 Split=Y
-  DockNode        ID=0x0000000D Parent=0xE68300E5 SizeRef=300,86 Split=X Selected=0x43C0488A
-    DockNode      ID=0x00000013 Parent=0x0000000D SizeRef=226,189 Selected=0x43C0488A
-    DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=439,189 Split=X Selected=0xE5B7433E
-      DockNode    ID=0x00000015 Parent=0x00000014 SizeRef=220,189 Selected=0xE5B7433E
-      DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=217,189 Selected=0xD45F59A3
-  DockNode        ID=0x0000000E Parent=0xE68300E5 SizeRef=300,90 Split=X
-    DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=226,90 Selected=0x5C8F53A1
-    DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=439,90 Split=X Selected=0xFAF85815
-      DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=220,197 CentralNode=1 Selected=0xFAF85815
-      DockNode    ID=0x00000012 Parent=0x00000010 SizeRef=217,197 Selected=0xCB104288
+DockSpace         ID=0xE68300E5 Window=0x033EB1DA Pos=3592,759 Size=1241,459 Split=X
+  DockNode        ID=0x00000019 Parent=0xE68300E5 SizeRef=576,388 Split=Y
+    DockNode      ID=0x0000000D Parent=0x00000019 SizeRef=300,86 Split=X Selected=0x43C0488A
+      DockNode    ID=0x00000013 Parent=0x0000000D SizeRef=204,189 Selected=0x43C0488A
+      DockNode    ID=0x00000014 Parent=0x0000000D SizeRef=460,189 Split=X Selected=0xE5B7433E
+        DockNode  ID=0x00000015 Parent=0x00000014 SizeRef=238,189 Selected=0xE5B7433E
+        DockNode  ID=0x00000017 Parent=0x00000014 SizeRef=220,189 Selected=0xD45F59A3
+    DockNode      ID=0x0000000E Parent=0x00000019 SizeRef=300,90 Split=X
+      DockNode    ID=0x0000000F Parent=0x0000000E SizeRef=204,90 Selected=0x5C8F53A1
+      DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=460,90 Split=X Selected=0xFAF85815
+        DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=236,197 CentralNode=1 Selected=0xFAF85815
+        DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=222,197 Selected=0xCB104288
+  DockNode        ID=0x0000001A Parent=0xE68300E5 SizeRef=496,388 Selected=0x89C40EA5
 
