--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -1,35 +1,35 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,22
-Size=1841,1015
+Size=2048,1015
 Collapsed=0
 
 [Window][###java.lang.Class:Environment]
-Pos=1475,22
-Size=366,284
+Pos=1559,22
+Size=489,802
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000007,1
 
 [Window][###java.lang.Integer:Stepping L515 Simulator]
-Pos=1475,826
-Size=366,211
+Pos=1559,826
+Size=489,211
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][###GlobalWidgetIndex:1:Stepping L515 Color]
 Pos=0,22
-Size=230,338
+Size=256,338
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][###GlobalWidgetIndex:0:Stepping L515 Depth]
 Pos=0,362
-Size=230,331
+Size=256,331
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][3D View]
-Pos=232,22
-Size=1241,532
+Pos=258,22
+Size=1299,532
 Collapsed=0
 DockId=0x00000016,0
 
@@ -45,10 +45,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][GPU Planar Region Extraction]
-Pos=1475,308
-Size=366,516
+Pos=1559,22
+Size=489,802
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000007,0
 
 [Window][Normalized Depth]
 Pos=421,65
@@ -62,75 +62,73 @@ Collapsed=0
 
 [Window][Filtered Depth]
 Pos=0,695
-Size=230,342
+Size=256,342
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][SubImages]
-Pos=232,556
-Size=1241,481
+Pos=258,556
+Size=1299,481
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Gx Image]
-Pos=232,803
-Size=204,234
+Pos=258,803
+Size=214,234
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Gy Image]
-Pos=438,803
-Size=236,234
+Pos=474,803
+Size=257,234
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Gz Image]
-Pos=676,803
+Pos=733,803
 Size=222,234
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Nx Image]
-Pos=232,578
-Size=204,223
+Pos=258,578
+Size=214,223
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Ny Image]
-Pos=438,578
-Size=238,223
+Pos=474,578
+Size=249,223
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Nz Image]
-Pos=678,578
-Size=220,223
+Pos=725,578
+Size=230,223
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Planar Region Extraction Image]
-Pos=900,578
-Size=573,459
+Pos=957,578
+Size=600,459
 Collapsed=0
 DockId=0x0000001A,0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=1841,1015 Split=X Selected=0x2E64DC63
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1473,808 Split=X
-    DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=230,578 Split=Y Selected=0x9EB86F58
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3360,203 Size=2048,1015 Split=X Selected=0x2E64DC63
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1557,808 Split=X
+    DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=256,578 Split=Y Selected=0x9EB86F58
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=397,671 Split=Y Selected=0x9D97B846
         DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=397,338 Selected=0x9EB86F58
         DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=397,331 Selected=0x9D97B846
       DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,342 Selected=0x768036C6
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1241,578 Split=Y Selected=0x2E64DC63
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1299,578 Split=Y Selected=0x2E64DC63
       DockNode    ID=0x00000016 Parent=0x00000003 SizeRef=1074,532 CentralNode=1 Selected=0x2E64DC63
       DockNode    ID=0x00000018 Parent=0x00000003 SizeRef=1074,481 Selected=0x033EB1DA
-  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=366,808 Split=Y Selected=0x91AAEDF6
-    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Split=Y Selected=0x66CCB7E1
-      DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=345,284 Selected=0x66CCB7E1
-      DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=345,516 Selected=0x78337185
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=489,808 Split=Y Selected=0x91AAEDF6
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=376,638 Selected=0x78337185
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=376,168 Selected=0x91AAEDF6
-DockSpace         ID=0xE68300E5 Window=0x033EB1DA Pos=3592,759 Size=1241,459 Split=X
+DockSpace         ID=0xE68300E5 Window=0x033EB1DA Pos=3618,759 Size=1299,459 Split=X
   DockNode        ID=0x00000019 Parent=0xE68300E5 SizeRef=576,388 Split=Y
     DockNode      ID=0x0000000D Parent=0x00000019 SizeRef=300,86 Split=X Selected=0x43C0488A
       DockNode    ID=0x00000013 Parent=0x0000000D SizeRef=204,189 Selected=0x43C0488A
