Fix up replacing block falling demo.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXBulletPhysicsInteractionForcesDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXBulletPhysicsInteractionForcesDemo/ImGuiSettings.ini
@@ -16,12 +16,20 @@ Collapsed=0
 
 [Window][###java.lang.Class:Environment]
 Pos=0,22
-Size=344,784
+Size=344,582
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
+
+[Window][Demo]
+Pos=0,606
+Size=344,200
+Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=3666,318 Size=1228,784 Split=X Selected=0x2E64DC63
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=344,784 Selected=0x66CCB7E1
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=882,784 CentralNode=1 Selected=0x2E64DC63
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=3666,318 Size=1228,784 Split=X Selected=0x2E64DC63
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=344,784 Split=Y Selected=0x66CCB7E1
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=344,582 Selected=0x66CCB7E1
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=344,200 Selected=0x7670709E
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=882,784 CentralNode=1 Selected=0x2E64DC63
 
