Fix up SCS 2 GDX interface. Show/hide collision meshes. Improve updating Bullet debug drawings.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
@@ -20,8 +20,16 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][SCS 2 Physics Simulator]
+Pos=0,22
+Size=299,933
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=3355,256 Size=1388,933 Split=X Selected=0x2E64DC63
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=299,933 Selected=0x3486C767
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=997,933 CentralNode=1 Selected=0x2E64DC63
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=3586,244 Size=1388,933 Split=X Selected=0x2E64DC63
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=299,933 Selected=0xCC714472
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1087,933 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=299,933 Selected=0x3486C767
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=997,933 CentralNode=1 Selected=0x2E64DC63
 
