Bringup SCS 2 YoPlot panels. Next step is adding variables to the panels.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
@@ -26,10 +26,42 @@ Size=299,933
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][SCS 2 Plot Manager]
+Pos=0,346
+Size=299,168
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Plot Panel 1]
+Pos=0,485
+Size=299,470
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][SCS 2 Simulation Session]
+Pos=0,22
+Size=299,322
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Hinge Data]
+Pos=0,516
+Size=299,439
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=3586,244 Size=1388,933 Split=X Selected=0x2E64DC63
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=299,933 Selected=0xCC714472
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1087,933 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=299,933 Selected=0x3486C767
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=997,933 CentralNode=1 Selected=0x2E64DC63
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3586,244 Size=1388,933 Split=X Selected=0x2E64DC63
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=299,933 Split=Y Selected=0xD5230E57
+    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=299,322 Selected=0xD5230E57
+    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=299,609 Split=Y Selected=0x3D68BB19
+      DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=299,137 Split=Y Selected=0x3D68BB19
+        DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=299,168 Selected=0x3D68BB19
+        DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=299,439 Selected=0xA02AEA93
+      DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=299,470 Selected=0x26A5DA67
+  DockNode        ID=0x00000006 Parent=0x8B93E3BD SizeRef=1087,933 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=299,933 Selected=0xCC714472
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=1087,933 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=299,933 Selected=0x3486C767
+      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=997,933 CentralNode=1 Selected=0x2E64DC63
 
