--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXSCS2BulletPhysicsDoorDemo/ImGuiSettings.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,22
-Size=1493,786
+Size=1493,905
 Collapsed=0
 
 [Window][Physics Simulator]
@@ -11,12 +11,13 @@ DockId=0x00000001,0
 
 [Window][3D View]
 Pos=324,22
-Size=1169,786
+Size=1169,905
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=60,60
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -40,13 +41,13 @@ DockId=0x0000000A,0
 
 [Window][SCS 2 Simulation Session]
 Pos=0,22
-Size=322,271
+Size=322,412
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Hinge Data]
-Pos=-32,569
-Size=299,439
+Pos=0,436
+Size=322,491
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -57,16 +58,16 @@ Size=800,800
 Collapsed=0
 
 [Window][Hinge Joint Data]
-Pos=0,421
-Size=322,387
+Pos=0,295
+Size=322,513
 Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=2861,300 Size=1493,786 Split=X Selected=0x2E64DC63
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=3456,216 Size=1493,905 Split=X Selected=0x2E64DC63
   DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=299,933 Split=Y Selected=0xD5230E57
-    DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=299,322 Selected=0xD5230E57
-    DockNode        ID=0x00000008 Parent=0x00000005 SizeRef=299,609 Split=Y Selected=0x3D68BB19
+    DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=299,358 Selected=0xD5230E57
+    DockNode        ID=0x00000008 Parent=0x00000005 SizeRef=299,426 Split=Y Selected=0x3D68BB19
       DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=299,137 Split=Y Selected=0x3D68BB19
         DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=299,168 Split=Y Selected=0x3D68BB19
           DockNode  ID=0x0000000D Parent=0x0000000B SizeRef=322,124 Selected=0x3D68BB19
