Add ability to change the color of the scene to debug channel mismatches.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXROS2VideoSensorDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXROS2VideoSensorDemo/ImGuiSettings.ini
@@ -38,8 +38,14 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][###java.lang.Class:Environment]
+Pos=1096,22
+Size=413,871
+Collapsed=0
+DockId=0x00000008,1
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3513,232 Size=1509,871 Split=X
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=997,293 Size=1509,871 Split=X
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1094,871 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=395,871 Split=Y Selected=0xE5A6EDBB
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=639,199 Selected=0xD2D5F56F
