--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXArUcoCodeDetectionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXArUcoCodeDetectionDemo/ImGuiSettings.ini
@@ -1,31 +1,31 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=1953,935
+Pos=0,22
+Size=1953,932
 Collapsed=0
 
 [Window][###java.lang.Integer:Blackfly Fisheye Simulator]
-Pos=0,19
-Size=446,467
+Pos=0,22
+Size=366,465
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][###GlobalWidgetIndex:1:Blackfly Fisheye Color]
-Pos=0,488
-Size=446,466
+Pos=0,489
+Size=366,465
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][###java.lang.Class:Environment]
-Pos=1618,19
-Size=335,935
+Pos=1618,22
+Size=335,932
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][3D View]
-Pos=857,19
-Size=759,935
+Pos=1156,22
+Size=460,932
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000F,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -44,16 +44,48 @@ Size=407,466
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][ArUco Marker Detection from Sensor]
+Pos=368,22
+Size=386,538
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][ArUco Marker Detection Image from Sensor]
+Pos=368,562
+Size=386,392
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Test image detection]
+Pos=756,22
+Size=398,536
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][ArUco Marker Detection Image Test]
+Pos=756,560
+Size=398,394
+Collapsed=0
+DockId=0x00000012,0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=3412,241 Size=1953,935 Split=X Selected=0x2E64DC63
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=446,749 Split=Y Selected=0xBF7DBF71
-    DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=448,467 Selected=0xBF7DBF71
-    DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=448,466 Selected=0x89A56FEB
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1505,749 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1168,749 Split=X Selected=0x2E64DC63
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=407,935 Split=Y Selected=0x222E34E7
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=270,467 Selected=0xB9DAB8A8
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=270,466 Selected=0x222E34E7
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=759,935 CentralNode=1 Selected=0x2E64DC63
-    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=335,749 Selected=0x66CCB7E1
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=3304,244 Size=1953,932 Split=X Selected=0x2E64DC63
+  DockNode            ID=0x00000003 Parent=0x8B93E3BD SizeRef=366,749 Split=Y Selected=0xBF7DBF71
+    DockNode          ID=0x00000005 Parent=0x00000003 SizeRef=448,467 Selected=0xBF7DBF71
+    DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=448,466 Selected=0x89A56FEB
+  DockNode            ID=0x00000004 Parent=0x8B93E3BD SizeRef=1585,749 Split=X
+    DockNode          ID=0x00000001 Parent=0x00000004 SizeRef=1248,749 Split=X Selected=0x2E64DC63
+      DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=407,935 Split=Y Selected=0x222E34E7
+        DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=270,467 Selected=0xB9DAB8A8
+        DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=270,466 Selected=0x222E34E7
+      DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=759,935 Split=X Selected=0x2E64DC63
+        DockNode      ID=0x0000000B Parent=0x00000008 SizeRef=386,932 Split=Y Selected=0x7D752E50
+          DockNode    ID=0x0000000D Parent=0x0000000B SizeRef=360,538 Selected=0x131E5189
+          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=360,392 Selected=0x7D752E50
+        DockNode      ID=0x0000000C Parent=0x00000008 SizeRef=860,932 Split=X Selected=0x2E64DC63
+          DockNode    ID=0x00000010 Parent=0x0000000C SizeRef=398,932 Split=Y
+            DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=300,536 Selected=0xE04B40EA
+            DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=300,394 Selected=0x2E368FC4
+          DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=460,932 CentralNode=1 Selected=0x2E64DC63
+    DockNode          ID=0x00000002 Parent=0x00000004 SizeRef=335,749 Selected=0x66CCB7E1
 
