Add the building constructor.

--- a/ihmc-high-level-behaviors/src/libgdx/resources/configurations/PerceptionVisualizer/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/libgdx/resources/configurations/PerceptionVisualizer/ImGuiSettings.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,29
-Size=2269,1300
+Pos=0,19
+Size=2269,1311
 Collapsed=0
 
 [Window][Debug##Default]
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][3D View]
-Pos=0,29
-Size=1571,1300
+Pos=0,19
+Size=1571,1311
 Collapsed=0
 DockId=0x00000009,0
 
@@ -45,14 +45,14 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][MapSense Configuration]
-Pos=1573,116
+Pos=1573,107
 Size=696,50
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Global Visualizers]
-Pos=1573,29
-Size=696,85
+Pos=1573,19
+Size=696,86
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -69,19 +69,25 @@ Collapsed=0
 DockId=0x00000012,0
 
 [Window][###java.lang.Class:Environment]
-Pos=1573,1131
-Size=696,198
+Pos=1874,839
+Size=395,491
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000018,0
 
 [Window][###java.lang.Integer:Ouster Lidar Simulator]
-Pos=1573,168
-Size=696,961
+Pos=1573,159
+Size=696,678
 Collapsed=0
 DockId=0x00000016,0
 
+[Window][###java.lang.Class:Constructor]
+Pos=1573,839
+Size=299,491
+Collapsed=0
+DockId=0x00000017,0
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=786,457 Size=2269,1300 Split=X
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=786,447 Size=2269,1311 Split=X
   DockNode            ID=0x00000005 Parent=0x8B93E3BD SizeRef=382,978 Split=Y Selected=0x78CFD471
     DockNode          ID=0x0000000F Parent=0x00000005 SizeRef=435,158 Selected=0x78CFD471
     DockNode          ID=0x00000010 Parent=0x00000005 SizeRef=435,818 Split=Y Selected=0x5CDC6C0F
@@ -100,8 +106,10 @@ DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=786,457 Size=2269,1300
     DockNode          ID=0x0000000C Parent=0x00000006 SizeRef=462,978 Split=Y Selected=0xD2D5F56F
       DockNode        ID=0x0000000D Parent=0x0000000C SizeRef=383,85 Selected=0xD2D5F56F
       DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=383,1213 Split=Y Selected=0x3CEB8837
-        DockNode      ID=0x00000013 Parent=0x0000000E SizeRef=696,1013 Split=Y Selected=0x3CEB8837
+        DockNode      ID=0x00000013 Parent=0x0000000E SizeRef=696,730 Split=Y Selected=0x3CEB8837
           DockNode    ID=0x00000015 Parent=0x00000013 SizeRef=696,50 Selected=0x3CEB8837
-          DockNode    ID=0x00000016 Parent=0x00000013 SizeRef=696,961 Selected=0x918A45D0
-        DockNode      ID=0x00000014 Parent=0x0000000E SizeRef=696,198 Selected=0x66CCB7E1
+          DockNode    ID=0x00000016 Parent=0x00000013 SizeRef=696,678 Selected=0x918A45D0
+        DockNode      ID=0x00000014 Parent=0x0000000E SizeRef=696,491 Split=X Selected=0x66CCB7E1
+          DockNode    ID=0x00000017 Parent=0x00000014 SizeRef=299,491 Selected=0x5D3373FA
+          DockNode    ID=0x00000018 Parent=0x00000014 SizeRef=395,491 Selected=0x66CCB7E1
 
