Extract Command and Machine.

--- a/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
@@ -5,15 +5,23 @@ Collapsed=0
 
 [Window][Main Panel]
 Pos=0,22
-Size=1557,828
+Size=1557,258
 Collapsed=0
-DockId=0x8B93E3BD,0
+DockId=0x00000001,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Mission Control Service Log]
+Pos=0,282
+Size=1557,568
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=3544,310 Size=1557,828 CentralNode=1 Selected=0x7519F389
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=941,317 Size=1557,828 Split=Y Selected=0x7519F389
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1557,258 CentralNode=1 Selected=0x7519F389
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1557,568 Selected=0xC86DD97C
 
