--- a/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][Main Panel]
 Pos=0,22
-Size=1557,258
+Size=1557,220
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -20,8 +20,16 @@ Size=1557,568
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Raspberry Pi Mission Control Service Log]
+Pos=0,244
+Size=1557,606
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=941,317 Size=1557,828 Split=Y Selected=0x7519F389
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1557,258 CentralNode=1 Selected=0x7519F389
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1557,568 Selected=0xC86DD97C
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=941,317 Size=1557,828 Split=Y Selected=0x7519F389
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=1557,258 Split=Y Selected=0x7519F389
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1557,220 CentralNode=1 Selected=0x7519F389
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1557,606 Selected=0xE14FB642
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1557,568 Selected=0xC86DD97C
 
