Clean up CPU and RAM usage plots.

--- a/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/libgdx/resources/configurations/SSHJShell/ImGuiSettings.ini
@@ -1,13 +1,13 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,22
-Size=1557,828
+Size=1463,992
 Collapsed=0
 
 [Window][Main Panel]
 Pos=0,22
-Size=1557,220
+Size=534,992
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -21,15 +21,15 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Raspberry Pi Mission Control Service Log]
-Pos=0,244
-Size=1557,606
+Pos=536,22
+Size=927,992
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=941,317 Size=1557,828 Split=Y Selected=0x7519F389
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=1557,258 Split=Y Selected=0x7519F389
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1557,220 CentralNode=1 Selected=0x7519F389
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1557,606 Selected=0xE14FB642
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1557,568 Selected=0xC86DD97C
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=759,144 Size=1463,992 Split=X Selected=0x7519F389
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=534,727 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1557,258 CentralNode=1 Selected=0x7519F389
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1557,568 Selected=0xC86DD97C
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=927,727 Selected=0xE14FB642
 
