--- a/ihmc-high-level-behaviors/src/main/resources/configurations/GDXFFMPEGLoggingDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/main/resources/configurations/GDXFFMPEGLoggingDemo/ImGuiSettings.ini
@@ -1,24 +1,25 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=800,581
+Pos=0,22
+Size=1299,675
 Collapsed=0
 
 [Window][Image]
-Pos=0,19
-Size=276,581
+Pos=0,22
+Size=492,636
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Sample Image]
-Pos=302,54
-Size=470,478
-Collapsed=0
-
-[Window][3D View]
-Pos=278,19
-Size=522,581
+Pos=494,22
+Size=805,675
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][3D View]
+Pos=0,660
+Size=492,37
+Collapsed=0
+DockId=0x00000004,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -26,7 +27,9 @@ Size=400,400
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=2080,679 Size=800,581 Split=X Selected=0x2E64DC63
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=276,581 Selected=0x04FC2B5B
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=522,581 CentralNode=1 Selected=0x2E64DC63
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=3733,362 Size=1299,675 Split=X Selected=0x2E64DC63
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=492,581 Split=Y Selected=0x04FC2B5B
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=276,544 Selected=0x04FC2B5B
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=276,32 Selected=0x2E64DC63
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=805,581 CentralNode=1 Selected=0xEE6844B8
 
